grammar.js
    source_file: $ => seq(repeat(seq($.declaration, $._separator)), optional($.declaration)),

    block: $ => prec(2, seq(
      '{',
      sep(seq(optional($.tag), $.statement), $._separator),
      '}',
    )),

    build_tag: $ => seq('#+', /.+/),

    procedure_declaration: $ => seq(
      optional($.attributes),
      $.expression,
      '::',
      optional($.tag),
      $.procedure,
    ),
    procedure: $ => prec.right(seq(
      'proc',
      optional($.calling_convention),
      $.parameters,
      optional(seq(
        '->',
        optional($.tag),
        choice($.type, $.named_type),
        optional($.tag),
      )),
      optional($.where_clause),
      optional($.tag),
      optional(choice($.block, $.uninitialized)),
    )),

    bit_field_declaration: $ => seq(
      optional($.attributes),
      $.expression,
      '::',
      'bit_field',
      $.type,
      '{',
      optional(seq(
        commaSep1(seq($.identifier, ':', $.type, '|', $.expression)),
        optional(','),
      )),
      '}',
    ),

    const_type_declaration: $ => prec(1, seq(
      optional($.attributes),
      $.expression,
      ':',
      $.type,
      ':',
      $.expression,
    )),

    parameters: $ => seq(
      '(',
      optional(seq(
        commaSep1(choice($.parameter, $.default_parameter)),
        optional(','),
      )),
      ')',
    ),
    parameter: $ => prec.right(seq(
      commaSep1($._param_header),
      optional($._param_type),
    )),
    _param_header: $ => seq(
      optional($.tag),
      optional('using'),
      optional('$'),
      choice(
        $.identifier,
        $.variadic_type,
        $.array_type,
        $.pointer_type,
        $.field_type,
        $._procedure_type,
      ),
    ),
    _param_type: $ => seq(
      ':',
      optional($.tag),
      $.type,
      optional($.identifier),
      optional(seq('=', $.expression)),
    ),


    assignment_statement: $ => prec(PREC.ASSIGNMENT, seq(
      optional(seq($.attributes, optional($.tag))),
      commaSep1($.expression),
      choice('=', ':='),
      optional($.tag),
      commaSep1(choice($.expression, $.procedure)),
    )),

    for_statement: $ => seq(
      'for',
      optional(choice(
        seq(
          optional(seq(
            optional(field('initializer', choice($.assignment_statement, $.update_statement, $.var_declaration))),
            ';',
          )),
          optional(field('condition', $.expression)),
          optional(seq(
            ';',
            optional(
              field('post', choice(
                $.update_statement,
                alias($._simple_assignment_statement, $.assignment_statement),
                // $.assignment_statement,
              )),
            ),
          )),
        ),
        $._for_in_expression,
      )),
      field('consequence', choice($.block, seq('do', $.statement))),
    ),
    _for_in_expression: $ => seq(
      optional(seq(
        optional(field('initializer', choice($.assignment_statement, $.update_statement, $.var_declaration))),
        ';',
      )),
      commaSep($.expression),
      'in',
      $.expression,
    ),

    _simple_assignment_statement: $ => seq(
      optional($.attributes),
      commaSep1($.expression),
      choice('=', ':='),
      commaSep1(choice($.expression)),
    ),

    return_statement: $ => prec.right(1, seq(
      'return',
      optional($.tag),
      optional(seq(
        commaExternalSep1(choice($.expression, $._procedure_type), $),
        optional(','),
      )),
    )),

    _expression_no_tag: $ => choice(
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
      $.call_expression,
      $.selector_call_expression,
      $.member_expression,
      $.index_expression,
      $.slice_expression,
      $.range_expression,
      $.cast_expression,
      $.parenthesized_expression,
      $.in_expression,
      $.variadic_expression,
      $.or_return_expression,
      $.or_continue_expression,
      $.or_break_expression,
      $.identifier,
      $.address,
      $.map_type,
      $.distinct_type,
      $.matrix_type,
      $.literal,
      '?',
    ),

    binary_expression: $ => {
      const table = [
        ['||', PREC.LOGICAL_OR],
        ['or_else', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['>', PREC.COMPARE],
        ['>=', PREC.COMPARE],
        ['<=', PREC.COMPARE],
        ['<', PREC.COMPARE],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['~=', PREC.EQUALITY],
        ['|', PREC.BITWISE_OR],
        ['~', PREC.BITWISE_XOR],
        ['&', PREC.BITWISE_AND],
        ['&~', PREC.BITWISE_AND_NOT],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['%%', PREC.MULTIPLY],
      ];

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $.expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $.expression),
        ));
      }));
    },

    ternary_expression: $ => prec.right(seq(
      field('condition', choice($._expression_no_tag, $.struct)),
      choice(
        prec(PREC.TERNARY, seq(
          '?',
          field('consequence', $.expression),
          ':',
          field('alternative', $.expression),
        )),
        seq(
          choice('if', 'when'),
          field('consequence', $.expression),
          'else',
          field('alternative', $.expression),
        ),
      ),
    )),

    call_expression: $ => prec.left(PREC.CALL, seq(
      field('function', choice(seq($.tag, $.identifier), $._expression_no_tag, $.tag)),
      '(',
      optional(seq(
        commaSep1(seq(
          field('argument', choice($.expression, $.array_type, $.struct_type, $.pointer_type, $.procedure)),
          optional(seq('=', choice($.expression))),
        )),
        optional(','),
      )),
      ')',
    )),

    member_expression: $ => prec.left(PREC.MEMBER, seq(
      optional($.expression),
      '.',
      $.expression,
    )),

    type: $ => prec.right(choice(
      $.identifier,
      $.pointer_type,
      $.variadic_type,
      $.array_type,
      $.map_type,
      $.union_type,
      $.bit_set_type,
      $.matrix_type,
      $.field_type,
      $.tuple_type,
      $.struct_type,
      $.enum_type,
      $.bit_field_type,
      $.constant_type,
      $.specialized_type,
      $._procedure_type,
      $.distinct_type,
      $.empty_type,
      $.polymorphic_type,
      $.conditional_type,
      '...',
    )),

    array_type: $ => prec(1, seq(
      optional($.tag),
      '[',
      optional(seq(optional('$'), choice('dynamic', '^', '?', $.expression))),
      ']',
      optional($.type),
    )),

    _procedure_type: $ => alias($.procedure, $.procedure_type),

    number: _ => {
      const decimal = /[0-9][0-9_]*[ijk]?/;
      const hex = /0[xh][0-9a-fA-F_]+[ijk]?/;
      const octal = /0o[0-7][0-7]*[ijk]?/;
      const binary = /0b[01][01_]*[ijk]?/;
      // no float

      return token(choice(
        seq(optional('-'), decimal),
        seq(optional('-'), hex),
        seq(optional('-'), octal),
        seq(optional('-'), binary),
      ));
    },

    nil: _ => 'nil',

    tag: _ => token(seq(/#[a-zA-Z_][a-zA-Z0-9_]*/, optional(seq('(', /\w*/, ')')))),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/u,

    _separator: $ => choice(
      $._newline,
      ';',
    ),

    comment: _ => token(seq('//', /[^\r\n]*/)),
  },
});

module.exports.PREC = PREC;

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return sep1(rule, ',');
}

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @param {GrammarSymbols<any>} $
 *
 * @returns {SeqRule}
 */
function commaExternalSep1(rule, $) {
  return sep1(rule, choice(',', alias($._nl_comma, ',')));
}

/**
 * Creates a rule to match zero or more occurrences of `rule` separated by `sep`
 *
 * @param {RegExp | Rule | string} rule
 *
 * @param {RegExp | Rule | string} sep
 *
 * @returns {ChoiceRule}
 */
function sep(rule, sep) {
  return optional(seq(rule, repeat(seq(sep, optional(rule)))));
}

/**
 * Creates a rule to match one or more occurrences of `rule` separated by `sep`
 *
 * @param {RegExp | Rule | string} rule
 *
 * @param {RegExp | Rule | string} sep
 *
 * @returns {SeqRule}
 */
function sep1(rule, sep) {
  return seq(rule, repeat(seq(sep, rule)));
}
