test/corpus/declarations.txt
====================
Bit field type
====================

Foo :: bit_field u16 { // backing type must be an integer or array of integers
    x: i32     | 3, // signed integers will be signed extended on use
    y: u16     | 2 + 3, // general expressions
    z: My_Enum | foo.SOME_CONSTANT, // ability to define the bit-width elsewhere
    w: bool    | foo.SOME_CONSTANT > 10 ? 2 : 1,
}

Handle :: bit_field u32 {
    slot:       u32  | 16,
    generation: u32  | 15,
    in_use:     bool |  1,
}

---

(source_file
  (bit_field_declaration
    (identifier)
    (type
      (identifier))
    (comment)
    (identifier)
    (type
      (identifier))
    (number)
    (comment)
    (identifier)
    (type
      (identifier))
    (binary_expression
      (number)
      (number))
    (comment)
    (identifier)
    (type
      (identifier))
    (member_expression
      (identifier)
      (identifier))
    (comment)
    (identifier)
    (type
      (identifier))
    (ternary_expression
      (binary_expression
        (member_expression
          (identifier)
          (identifier))
        (number))
      (number)
      (number)))
  (bit_field_declaration
    (identifier)
    (type
      (identifier))
    (identifier)
    (type
      (identifier))
    (number)
    (identifier)
    (type
      (identifier))
    (number)
    (identifier)
    (type
      (identifier))
    (number)))

====================
Build Tags
====================

#+build darwin, linux

---

(source_file
  (build_tag))

====================
Typed proc declaration
====================

grass_map_generator_generate: Map_Generator_Generate_Proc : proc(
    data: rawptr,
    world_origin: [2]f32,
) -> Map_Chunk {
    return nil
}

after: int : 1

---

(source_file
  (const_type_declaration
    (identifier)
    (type
      (identifier))
    (procedure
      (parameters
        (parameter
          (identifier)
          (type
            (identifier)))
        (parameter
          (identifier)
          (type
            (array_type
              (number)
              (type
                (identifier))))))
      (type
        (identifier))
      (block
        (return_statement
          (nil)))))
  (const_type_declaration
    (identifier)
    (type
      (identifier))
    (number)))

====================
Tagged typed proc declaration
====================

update: Update_Proc : #force_inline proc(data: rawptr) {
    return
}

after: int : 1

---

(source_file
  (const_type_declaration
    (identifier)
    (type
      (identifier))
    (tag)
    (procedure
      (parameters
        (parameter
          (identifier)
          (type
            (identifier))))
      (block
        (return_statement))))
  (const_type_declaration
    (identifier)
    (type
      (identifier))
    (number)))
